# Rust_study

./: .gitignore  README.md  Rust学习笔记.md  Rust瀛︿範绗旇.md  deny.toml
01-ER/: Cargo.toml  ER-拓展索引.md  ER-本书目录.md  目录结构.md
01-ER/Chapter-01-Types/Item-01-express-data-structures/: 01-fundamental-types.md  02-scalar-types.md  03-aggregate-types.md  05-option-result.md  06-design-patterns.md  07-pitfalls.md  README.md
01-ER/Chapter-01-Types/Item-02-express-common-behavior/: 03-key-takeaways.md  04-examples.md  06-trait-generic-params.md  07-lifetime-vs-type-in-angle-brackets.md  08-scope-env-lifetime.md  09-methods-and-self.md  README.md
01-ER/Chapter-01-Types/Item-03-option-result-transforms/: README.md  cheat-sheet.md
01-ER/Chapter-01-Types/Item-04-idiomatic-error-types/: 01-core-concepts.md  02-logic-flow.md  03-key-takeaways.md  04-examples.md  README.md  cheat-sheet.md
01-ER/Chapter-01-Types/Item-05-type-conversions/: 01-core-concepts.md  02-logic-flow.md  03-key-takeaways.md  04-examples.md  README.md  cheat-sheet.md
01-ER/Chapter-01-Types/Item-06-newtype-pattern/: 02-logic-flow.md  README.md
01-ER/Chapter-01-Types/Item-07-builders/: 02-logic-flow.md  04-examples.md  README.md
01-ER/Chapter-01-Types/Item-08-references-pointers/: 03-key-takeaways.md  README.md  cheat-sheet.md
01-ER/Chapter-01-Types/Item-09-iterator-transforms/: 04-examples.md  README.md
01-ER/Chapter-02-Traits/Item-10-standard-traits/: 01-core-concepts.md  05-pitfalls.md  README.md  cheat-sheet.md
01-ER/Chapter-02-Traits/Item-11-drop-raii/: 01-core-concepts.md  03-key-takeaways.md  README.md
01-ER/Chapter-02-Traits/Item-12-generics-vs-trait-objects/: 01-core-concepts.md  05-pitfalls.md  07-dyn-trait-dst-carriers.md  README.md  cheat-sheet.md
01-ER/Chapter-02-Traits/Item-13-default-implementations/: 02-logic-flow.md  03-key-takeaways.md  05-pitfalls.md  README.md
01-ER/Chapter-03-Concepts/Item-14-lifetimes/: 01-core-concepts.md  05-pitfalls.md  README.md
01-ER/Chapter-03-Concepts/Item-15-borrow-checker/: 03-key-takeaways.md  README.md  cheat-sheet.md
01-ER/Chapter-03-Concepts/Item-16-avoid-unsafe/: 01-core-concepts.md  04-examples.md  05-pitfalls.md  README.md
01-ER/Chapter-03-Concepts/Item-17-shared-state-parallelism/: 02-logic-flow.md  03-key-takeaways.md  05-pitfalls.md  README.md
01-ER/Chapter-03-Concepts/Item-18-dont-panic/: 01-core-concepts.md  README.md
01-ER/Chapter-03-Concepts/Item-19-avoid-reflection/: 04-examples.md  README.md  cheat-sheet.md
01-ER/Chapter-03-Concepts/Item-20-avoid-over-optimize/: README.md  cheat-sheet.md
01-ER/Chapter-04-Dependencies/Item-21-semver/: 02-logic-flow.md  README.md
01-ER/Chapter-04-Dependencies/Item-22-minimize-visibility/: 05-pitfalls.md  README.md
01-ER/Chapter-04-Dependencies/Item-23-avoid-wildcard-imports/: 01-core-concepts.md  02-logic-flow.md  04-examples.md  05-pitfalls.md  README.md
01-ER/Chapter-04-Dependencies/Item-24-re-export-api-types/: 02-logic-flow.md  03-key-takeaways.md  04-examples.md  README.md  cheat-sheet.md
01-ER/Chapter-04-Dependencies/Item-25-dependency-graph/: 04-examples.md  README.md
01-ER/Chapter-04-Dependencies/Item-26-feature-creep/: README.md
01-ER/Chapter-05-Tooling/Item-27-document-public-api/: 04-examples.md  README.md
01-ER/Chapter-05-Tooling/Item-28-macros-judiciously/: 02-logic-flow.md  03-key-takeaways.md  05-pitfalls.md  README.md
01-ER/Chapter-05-Tooling/Item-29-clippy/: 03-key-takeaways.md  README.md  cheat-sheet.md
01-ER/Chapter-05-Tooling/Item-30-beyond-unit-tests/: 02-logic-flow.md  04-examples.md  README.md
01-ER/Chapter-05-Tooling/Item-31-tooling-ecosystem/: 01-core-concepts.md  04-examples.md  05-pitfalls.md  README.md
01-ER/Chapter-05-Tooling/Item-32-ci/: 02-logic-flow.md  03-key-takeaways.md  README.md
01-ER/Chapter-06-Beyond-Standard-Rust/Item-33-no-std/: 01-core-concepts.md  02-logic-flow.md  README.md  cheat-sheet.md
01-ER/Chapter-06-Beyond-Standard-Rust/Item-34-ffi-boundaries/: 01-core-concepts.md  05-pitfalls.md  README.md
01-ER/Chapter-06-Beyond-Standard-Rust/Item-35-bindgen/: README.md  cheat-sheet.md
01-ER/ER-demos/: Cargo.toml  README.md  WORKSPACE.md  clippy.toml
01-ER/scripts/: flatten-item-topics.py  split-item-topics.ps1  split-item-topics.py  update-er-links.ps1
03-Rust_Nomicon/11_NoStd/: 00-overview.md  Cargo.toml  README.md
03-Rust_Nomicon/11_NoStd/src/: lib.rs  main.rs
03-Rust_Nomicon/11_NoStd/templates/: no_main_linux.md
04-Async-Concurrency-Network/03-rust_network_programming/stage03_std_tcp_udp/: 3.1-simple-tcp-server-client.md  3.2-simple-udp-server-client.md  3.2.1-udp-multicasting.md  3.3-std-net-utilities.md  3.4-related-crates.md  3.5-summary.md  Cargo.toml  README.md  本章学习笔记.md
04-Async-Concurrency-Network/03-rust_network_programming/stage04_serde_parse/: 4.1-serde-serialization.md  4.1.1-custom-serde.md  4.2-parsing-textual.md  4.3-parsing-binary.md  4.4-summary.md  Cargo.toml  README.md  本章学习笔记.md
04-Async-Concurrency-Network/03-rust_network_programming/stage05_app_protocol/: 5.1-introduction-to-rpc.md  5.2-introduction-to-smtp.md  5.3-introduction-to-ftp-and-tftp.md  5.4-summary.md  Cargo.toml  README.md  本章学习笔记.md
04-Async-Concurrency-Network/03-rust_network_programming/stage06_http_programming/: 6.1-introducing-hyper.md  6.2-introducing-rocket.md  6.4-summary.md  README.md  (+3 more)
08-Practice-Projects/01-cdn-edge/: Cargo.toml  README.md
08-Practice-Projects/02-midfreq-trading-bot/: Cargo.toml  README.md
ER/ER-demos/: Cargo.toml  README.md  WORKSPACE.md
rust_network_programming/stage07_tokio_async_net/: 7.1-looking-into-the-future.md  7.1.1-streams-and-sinks.md  7.2-heading-to-tokio.md  7.2.1-socket-multiplexing.md  7.2.2-streaming-protocols.md  7.2.3-tokio-ecosystem.md  7.3-conclusion.md  Cargo.toml  README.md  本章学习笔记.md
rust_network_programming/stage09_appendix_deep/: 9.1-introduction-to-coroutines-and-generators.md  9.1.1-how-may-handles-coroutines.md  9.2-awaiting-the-future.md  9.3-data-parallelism.md  9.4-parsing-using-pest.md  9.5-miscellaneous-utilities.md  9.6-summary.md  Cargo.toml  README.md  本章学习笔记.md
(+3691 files in other folders)
