[workspace]
resolver = "2"
members = [
    "Chapter-01-Types/Item-02-express-common-behavior/demo",
    "Chapter-01-Types/Item-03-option-result-transforms/demo",
    "Chapter-01-Types/Item-04-idiomatic-error-types/demo",
    "Chapter-01-Types/Item-04-idiomatic-error-types/demo-core-error",
    "Chapter-01-Types/Item-05-type-conversions/demo",
    "Chapter-03-Concepts/Item-15-borrow-checker/demo",
    "Chapter-03-Concepts/Item-16-avoid-unsafe/demo",
    "Chapter-03-Concepts/Item-18-dont-panic/demo",
    "Chapter-03-Concepts/Item-20-avoid-over-optimize/demo",
    "Chapter-04-Dependencies/Item-22-minimize-visibility/demo",
    "Chapter-04-Dependencies/Item-26-feature-creep/demo",
    "Chapter-05-Tooling/Item-30-beyond-unit-tests/demo",
    "Chapter-06-Beyond-Standard-Rust/Item-33-no-std/demo",
    "Chapter-06-Beyond-Standard-Rust/Item-34-ffi-boundaries/demo",
    "Chapter-06-Beyond-Standard-Rust/Item-35-bindgen/demo-bindgen",
]

[workspace.package]
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
derive_more = { version = "2", features = ["from", "display", "add"] }
