[package]
name = "nomicon-11-no-std"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = ["std"]
std = []

# no_std 可执行文件常需 libc；必须禁用 default-features 以免拉回 std：
# libc = { version = "0.2", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "nomicon-11-no-std"
path = "src/main.rs"
required-features = ["std"]
