[package]
name = "cdn-edge"
version = "0.1.0"
edition = "2021"
description = "Lightweight HTTP edge cache node (practice project)"
publish = false

[dependencies]
axum = "0.7"
bytes = "1"
clap = { version = "4", features = ["derive"] }
http = "1"
lru = "0.12"
mime_guess = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
