[package]
name = "midfreq-trading-bot"
version = "0.1.0"
edition = "2021"
description = "Mid-low frequency trading bot framework (practice project)"
publish = false

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
