[package]
name = "study_network_ch07"
version = "0.1.0"
edition = "2021"
description = "Network Programming with Rust — Chapter 7 Tokio demos"

[[bin]]
name = "demo_7_1_join"
path = "7.1-looking-into-the-future/7.1-looking-into-the-future-join-demo.rs"

[[bin]]
name = "demo_7_1_1_mpsc"
path = "7.1.1-streams-and-sinks/7.1.1-streams-and-sinks-mpsc-demo.rs"

[[bin]]
name = "demo_7_2_echo_server"
path = "7.2-heading-to-tokio/7.2-heading-to-tokio-echo-server-demo.rs"

[[bin]]
name = "demo_7_2_echo_client"
path = "7.2-heading-to-tokio/7.2-heading-to-tokio-echo-client-demo.rs"

[[bin]]
name = "demo_7_2_1_multiplex"
path = "7.2.1-socket-multiplexing/7.2.1-socket-multiplexing-demo.rs"

[[bin]]
name = "demo_7_2_2_length_prefix"
path = "7.2.2-streaming-protocols/7.2.2-streaming-length-prefix-demo.rs"

[[bin]]
name = "demo_7_2_3_ecosystem"
path = "7.2.3-tokio-ecosystem/7.2.3-tokio-ecosystem-demo.rs"

[[bin]]
name = "demo_7_3_summary"
path = "7.3-conclusion/7.3-conclusion-demo.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
