[package]
name = "study_network_ch09"
version = "0.1.0"
edition = "2021"
description = "Network Programming with Rust — Appendix demos"

[[bin]]
name = "demo_9_1_async_vs_thread"
path = "9.1-introduction-to-coroutines-and-generators/9.1-coroutines-async-vs-thread-demo.rs"

[[bin]]
name = "demo_9_1_1_may_overview"
path = "9.1.1-how-may-handles-coroutines/9.1.1-may-overview-demo.rs"

[[bin]]
name = "demo_9_2_linear_async"
path = "9.2-awaiting-the-future/9.2-awaiting-future-linear-demo.rs"

[[bin]]
name = "demo_9_3_rayon"
path = "9.3-data-parallelism/9.3-data-parallelism-pariter-demo.rs"

[[bin]]
name = "demo_9_4_pest"
path = "9.4-parsing-using-pest/9.4-parsing-pest-http-line-demo.rs"

[[bin]]
name = "demo_9_5_bitflags_url"
path = "9.5-miscellaneous-utilities/9.5-misc-bitflags-url-demo.rs"

[[bin]]
name = "demo_9_6_summary"
path = "9.6-summary/9.6-summary-demo.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rayon = "1"
pest = "2"
pest_derive = "2"
bitflags = "2"
url = "2"
