[package]
name = "study_network_ch03"
version = "0.1.0"
edition = "2021"
description = "Network Programming with Rust — Chapter 3 TCP/UDP demos"

[[bin]]
name = "demo_3_1_tcp_echo_server"
path = "3.1-simple-tcp-server-client/code/3.1-simple-tcp-server-client-echo-server-demo.rs"

[[bin]]
name = "demo_3_1_tcp_echo_client"
path = "3.1-simple-tcp-server-client/code/3.1-simple-tcp-server-client-echo-client-demo.rs"

[[bin]]
name = "demo_3_2_udp_echo_server"
path = "3.2-simple-udp-server-client/code/3.2-simple-udp-server-client-echo-server-demo.rs"

[[bin]]
name = "demo_3_2_udp_echo_client"
path = "3.2-simple-udp-server-client/code/3.2-simple-udp-server-client-echo-client-demo.rs"

[[bin]]
name = "demo_3_2_1_multicast_recv"
path = "3.2.1-udp-multicasting/code/3.2.1-udp-multicasting-recv-demo.rs"

[[bin]]
name = "demo_3_2_1_multicast_send"
path = "3.2.1-udp-multicasting/code/3.2.1-udp-multicasting-send-demo.rs"

[[bin]]
name = "demo_3_3_std_net_utilities"
path = "3.3-std-net-utilities/code/3.3-std-net-utilities-demo.rs"

[[bin]]
name = "demo_3_4_related_crates"
path = "3.4-related-crates/code/3.4-related-crates-demo.rs"

[[bin]]
name = "demo_3_5_summary"
path = "3.5-summary/code/3.5-summary-demo.rs"
