[package]
name = "study_network_ch04"
version = "0.1.0"
edition = "2021"
description = "Network Programming with Rust — Chapter 4 Serde/nom demos"

[[bin]]
name = "demo_4_1_serde_point3d"
path = "4.1-serde-serialization/code/4.1-serde-serialization-point3d-demo.rs"

[[bin]]
name = "demo_4_1_1_custom_rename"
path = "4.1.1-custom-serde/code/4.1.1-custom-serde-rename-demo.rs"

[[bin]]
name = "demo_4_2_nom_http_line"
path = "4.2-parsing-textual/code/4.2-parsing-textual-http-line-demo.rs"

[[bin]]
name = "demo_4_3_binary_length_prefix"
path = "4.3-parsing-binary/code/4.3-parsing-binary-length-prefix-demo.rs"

[[bin]]
name = "demo_4_4_summary"
path = "4.4-summary/code/4.4-summary-demo.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nom = "7"
