[package]
name = "study_network_ch05"
version = "0.1.0"
edition = "2021"
description = "Network Programming with Rust — Chapter 5 application protocol demos"

[[bin]]
name = "demo_5_1_rpc_server"
path = "5.1-introduction-to-rpc/code/5.1-introduction-to-rpc-server-demo.rs"

[[bin]]
name = "demo_5_1_rpc_client"
path = "5.1-introduction-to-rpc/code/5.1-introduction-to-rpc-client-demo.rs"

[[bin]]
name = "demo_5_2_smtp_build"
path = "5.2-introduction-to-smtp/code/5.2-smtp-lettre-build-demo.rs"

[[bin]]
name = "demo_5_3_ftp_tftp_overview"
path = "5.3-introduction-to-ftp-and-tftp/code/5.3-ftp-tftp-overview-demo.rs"

[[bin]]
name = "demo_5_4_summary"
path = "5.4-summary/code/5.4-summary-demo.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport"] }
