[package]
name = "study_network_ch06"
version = "0.1.0"
edition = "2021"
description = "Network Programming with Rust — Chapter 6 HTTP demos"

[[bin]]
name = "demo_6_1_raw_http"
path = "6.1-introducing-hyper/code/6.1-introducing-hyper-raw-tcp-demo.rs"

[[bin]]
name = "demo_6_3_reqwest_get"
path = "6.3-introducing-reqwest/code/6.3-introducing-reqwest-get-demo.rs"

[[bin]]
name = "demo_6_4_summary"
path = "6.4-summary/code/6.4-summary-demo.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
