[package]
name = "study_network_ch08"
version = "0.1.0"
edition = "2021"
description = "Network Programming with Rust — Chapter 8 Security demos"

[[bin]]
name = "demo_8_1_https_get"
path = "8.1-securing-the-web/code/8.1-securing-the-web-https-get-demo.rs"

[[bin]]
name = "demo_8_1_1_acme_overview"
path = "8.1.1-letsencrypt-using-rust/code/8.1.1-letsencrypt-acme-overview-demo.rs"

[[bin]]
name = "demo_8_1_2_openssl_overview"
path = "8.1.2-openssl-using-rust/code/8.1.2-openssl-pem-overview-demo.rs"

[[bin]]
name = "demo_8_1_3_tokio_tls_overview"
path = "8.1.3-securing-tokio-applications/code/8.1.3-securing-tokio-overview-demo.rs"

[[bin]]
name = "demo_8_2_ring_x25519"
path = "8.2-cryptography-using-ring/code/8.2-cryptography-ring-x25519-demo.rs"

[[bin]]
name = "demo_8_3_summary"
path = "8.3-summary/code/8.3-summary-demo.rs"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
ring = "0.17"
