[package]
name = "study_network_ch06_rocket"
version = "0.1.0"
edition = "2021"
description = "Ch6 §6.2 — minimal Rocket hello (standalone crate)"

[[bin]]
name = "demo_6_2_rocket_hello"
path = "6.2-introducing-rocket-hello-demo.rs"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
